Regression: Texture coordinates from other object do not refresh if node inside group #94766

Closed
opened 2022-01-09 14:15:59 +01:00 by Vyacheslav Kobozev · 10 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-05 22:15, hash: 1d9bac7d92
Worked 3.0 release
Caused by 7e712b2d6a

Short Description
As title say. Texture coordinates from object just stay and do not move with object, if texture coordinate group is inside the group (2nd video)

Steps to Reproduce

2022-01-09_16-05-09.mp4
2022-01-09_16-19-37.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-05 22:15, hash: `1d9bac7d92` Worked 3.0 release Caused by 7e712b2d6a **Short Description** As title say. Texture coordinates from object just stay and do not move with object, if texture coordinate group is inside the group (2nd video) **Steps to Reproduce** - Open `cut off.blend` file - Move empty [cut off.blend](https://archive.blender.org/developer/F12797443/cut_off.blend) [#94766-working.blend](https://archive.blender.org/developer/F12798633/T94766-working.blend) [2022-01-09_16-05-09.mp4](https://archive.blender.org/developer/F12797435/2022-01-09_16-05-09.mp4) [2022-01-09_16-19-37.mp4](https://archive.blender.org/developer/F12797445/2022-01-09_16-19-37.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Vyacheslav Kobozev changed title from Shader nodes. Texture cordinates from other object do not refresh in realtime to Regression. Shader nodes. Texture cordinates from other object do not refresh in realtime 2022-01-09 14:16:29 +01:00
Vyacheslav Kobozev changed title from Regression. Shader nodes. Texture cordinates from other object do not refresh in realtime to Regression. Shader nodes. Texture cordinates from other object do not refresh if TC node inside group 2022-01-09 14:22:44 +01:00

similar or same issue, no refreshment for image sequence
2022-01-09_18-11-56.mp4

similar or same issue, no refreshment for image sequence [2022-01-09_18-11-56.mp4](https://archive.blender.org/developer/F12797534/2022-01-09_18-11-56.mp4)
Pratik Borhade changed title from Regression. Shader nodes. Texture cordinates from other object do not refresh if TC node inside group to Regression: Texture coordinates from other object do not refresh if node inside group 2022-01-10 08:25:12 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Probably came with 7e712b2d6a
I will bisect to confirm

Probably came with 7e712b2d6a I will bisect to confirm
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Yes, caused by 7e712b2d6a
@JacquesLucke , can you look at this?

Yes, caused by 7e712b2d6a @JacquesLucke , can you look at this?

This issue was referenced by 8dd163160e

This issue was referenced by 8dd163160e411c19989a046c1b93c274a3da3e3e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-01-10 13:08:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94766
No description provided.